--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -w ./routes/ -w ./helper/ server.js",
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^2.10.0",
-    "fastify-cors": "^3.0.0",
-    "fastify-jwt": "^1.1.0",
-    "mongoose": "^5.8.4"
+    "axios": "^0.21.0",
+    "dotenv-safe": "^8.2.0",
+    "fastify": "^3.9.1",
+    "fastify-cors": "^5.0.0",
+    "fastify-jwt": "^2.1.3",
+    "fastify-multipart": "^3.3.1",
+    "mongoose": "^5.11.4"
   }
 }
