--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 PROJECT_NAME=API
 
 #MongoDB Configuration
-#MONGO_USERNAME=
-#MONGO_PASSWORD=
-#MONGO_PORT=
-#MONGO_DB=
-#MONGO_HOSTNAME=
-#API_SECRET=
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_PORT=
+MONGO_DB=
+MONGO_HOSTNAME=
+API_SECRET=
