--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "use": "@vercel/node"
   }],
   "routes": [{
-    "src": "/routes(.*)",
-    "dest": "/api"
+    "src": "/routes",
+    "dest": "/"
   }]
 }
