--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
     "dotenv-safe": "^8.2.0",
-    "fastify": "^3.9.1",
-    "fastify-cors": "^5.0.0",
-    "fastify-jwt": "^2.1.3",
-    "fastify-multipart": "^3.3.1",
-    "mongoose": "^5.11.4"
+    "fastify": "^3.21.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-jwt": "^3.0.1",
+    "fastify-multipart": "^4.0.7",
+    "module-alias": "^2.2.2",
+    "mongoose": "^6.0.5"
+  },
+  "_moduleAliases": {
+    "@root": "./",
+    "@routes": "./routes",
+    "@models": "./models"
   }
 }
