--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
-  "version": 2,
-  "builds": [{ 
-    "src": "/index.js",
-    "use": "@vercel/node"
-  }],
-  "routes": [{
-      "src": "/api/(.*)",
-      "dest": "/index.js"
-    },
-    {
-      "handle": "filesystem"
-    }
-  ]
+  "rewrites": [{
+    "source": "/(.*)",
+    "destination": "/api/index.js"
+  }]
 }
